--- a/Marathon/src/Pages/Hero.css
+++ b/Marathon/src/Pages/Hero.css
@@ -21,9 +21,7 @@
 }
 
 /* Add a subtle zoom on hover for large screens */
-@media (min-width: 768px) {
-  
-}
+
 
 /* Media query for devices smaller than 768px (tablets and mobile devices) */
 @media (max-width: 768px) {
@@ -35,14 +33,26 @@
   .hero-container img {
     max-width: 90%; /* Adjusts image size for smaller screens */
     max-height: 90%; /* Adjusts image size for smaller screens */
-     /* Removes any negative margin */
+  }
+}
+
+/* Media query for devices between 770px and 1022px */
+@media (min-width: 770px) and (max-width: 1022px) {
+  .hero-container {
+    height: auto; /* Allows for flexible height */
+    padding: 15px; /* Padding for medium devices */
+  }
+
+  .hero-container img {
+    max-width: 85%; /* Adjust size for medium devices */
+    max-height: 80%; /* Set a maximum height */
   }
 }
 
 /* Media query for devices smaller than 480px (small mobile devices) */
 @media (max-width: 480px) {
   .hero-container img {
-    max-width: 90%; /* Ensures the image takes up full width */
+    max-width: 100%; /* Ensures the image takes up full width */
     border-radius: 4px; /* Slightly smaller border radius on mobile */
     margin-top: 0;
   }
@@ -52,12 +62,12 @@
 @media (min-width: 1024px) and (max-width: 1366px) {
   .hero-container {
     padding: 15px;
-    height: auto;
+    height: auto; /* Allows for flexible height */
   }
 
   .hero-container img {
     max-width: 85%; /* Adjust size for large tablets */
-    max-height: 90%;
+    max-height: 90%; /* Maintain height for large screens */
   }
 }
 
