--- a/Marathon/src/Pages/Sponsors.css
+++ b/Marathon/src/Pages/Sponsors.css
@@ -10,7 +10,7 @@
     text-transform: uppercase;
     letter-spacing: 2px;
     margin-bottom: 30px;
-    font-family: 'Montserrat', sans-serif; /* Updated font family */
+    font-family: 'Arial', sans-serif;/* Updated font family */
     color: #000;
 }
 
