--- a/src/Pages/Navbar.css
+++ b/src/Pages/Navbar.css
@@ -62,7 +62,7 @@
   .brand-logo {
     height: 50px; /* Even smaller logo for mobile devices */
   }
-  
+
 }
 
 /* Center nav links and style */
@@ -93,7 +93,7 @@
 /* Register button styles */
 .btn-register {
   margin-left: 20px; /* Space between nav links and register button */
-  background-color: #FFD700; /* Gold background color */
+  background-color: #007BFF; /* Gold background color */
   color: #fff; /* White text */
   padding: 0.5rem 1rem; /* Padding for button */
   border-radius: 5px; /* Rounded corners */
@@ -102,7 +102,7 @@
 
 /* Hover effect for register button */
 .btn-register:hover {
-  background-color: #f9d145; /* Slightly darker gold on hover */
+  background-color: #007BFF; /* Slightly darker gold on hover */
 }
 
 /* Responsive adjustments for register button */
