--- a/src/Pages/Navbar.css
+++ b/src/Pages/Navbar.css
@@ -82,7 +82,7 @@
 /* Hover effect for nav links */
 .navbar-nav .nav-link:hover {
   color: #2980b9 !important;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 /* Remove border from the navbar toggler */
