--- a/src/Pages/AboutDirector.css
+++ b/src/Pages/AboutDirector.css
@@ -50,7 +50,6 @@
     font-weight: 500;
     color: #555555;
     margin-bottom: 20px;
-    text-transform: uppercase;
 }
 
 /* Paragraph styling */
@@ -59,6 +58,7 @@
     line-height: 1.8;
     color: #777777;
     margin-bottom: 20px;
+    text-align: justify;
 }
 
 /* 1200px breakpoint (large desktops) */
