--- a/src/Pages/Emblem.css
+++ b/src/Pages/Emblem.css
@@ -26,17 +26,16 @@
     position: relative;
     overflow: hidden;
     transition: transform 0.3s ease-in-out;
-    max-width: 100%; /* Ensure logo container fits within the parent */
+    max-width: 100%;
   }
   
-  /* Logo Image Styling */
   .organizer-logos img {
     max-width: 50%;
     height: auto;
     display: block;
   }
   
-  /* Text Below Logo */
+
   .organizer-logos p {
     font-size: 1.2rem;
     margin-top: 10px;
@@ -45,10 +44,9 @@
   }
   
   .organizer-logos:hover p {
-    color: #007BFF; /* Change text color on hover */
+    color: #007BFF; 
   }
-  
-  /* Responsive Design */
+
   
   /* Tablets and Medium Devices */
   @media (min-width: 768px) {
@@ -68,7 +66,7 @@
     }
   
     .organizer-logo img {
-        width: 80%; /* Slightly smaller logo for larger screens */
+        width: 80%; 
     }
   
     .organizer-logo p {
@@ -83,7 +81,7 @@
     }
   
     .organizer-logo img {
-        width: 90%; /* Make logo take up more space */
+        width: 90%;
     }
   
     .organizer-logo p {
